--- a/index.html
+++ b/index.html
@@ -1,15 +1,89 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
         <title>Title</title>
-        <link rel="stylesheet" href="styles.css" />
-        <script defer src="script.js"></script>
+        <link rel="stylesheet" href="/main/styles.css" />
+        <script defer src="/main/script.js"></script>
+        <script defer src="/main/abcd.js"></script>
         <!--c-->
-        <script src="https://unpkg.com/cursor-effects@latest/dist/browser.js"></script> 
-        
     </head>
     <body>
+        <div id="container">
+    <div id="header" ></div>
+    <div id="headerArea">
+        <nav id="navbar" style="margin-bottom: 10px">
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+                <li><a href="#">Link</a></li>
+            </ul>
+        </nav>
+    </div>
+
+    <div id="flex">
+        <aside id="leftSidebar" style="margin-right: 10px">
+            <h2>Updates</h2>
+            <div class="box">
+                <p>I have recently updated this tool as of August 2022!</p>
+                <ul style="padding-left: 10px">
+                    <li>Rewrote the JS to generate cleaner code</li>
+                    <li>Rewrote the CSS in a way that hopefully makes much more sense to edit</li>
+                    <li>Added a couple of new features!</li>
+                    <li>Old version is still available <a href="old.html" target="_blank">here</a></li>
+                </ul>
+            </div>
+            <h2>Hi there!</h2>
+            <h3>Other Tools</h3>
+            <ul>
+                <li><a href="https://sadgrlonline.github.io/html-cheatsheet/" target="_blank">HTML Cheatsheet</a></li>
+                <li><a href="/sadgrl/webmastery/webmaster-links.html" target="_blank">Webmaster Links</a></li>
+                <li><a href="/sadgrl/webmastery/downloads/tiledbgs.html" target="_blank">Tiled BGs</a></li>
+                <li><a href="/sadgrl/webmastery/downloads/fonts.html" target="_blank">Fonts</a></li>
+                <li><a href="/sadgrl/projects/ideas/" target="_blank">Site Ideas</a></li>
+            </ul>
+        </aside>
+        <main>
+            <h1>Welcome to my Layout Maker!</h1>
+            <p><strong>Please read this first!</strong></p>
+            <p>
+                This tool generates a layout that is responsive, which means it looks great on phones! Use dropdowns
+                above to customize your layout's general features. Click the button to generate your HTML and CSS, and
+                paste it into a file on Neocities.
+            </p>
+            <p>
+                Then you can replace all of the text with your own. For more customization, the CSS code has comments to
+                explain what each part changes. Please read through the code - even if you have no idea what it means.
+            </p>
+            <p>
+                If you're feeling up for a challenge, I put together
+                <a href="/sadgrl/learn/understanding-tweaking-my-layout-maker/" target="_blank">a guide</a> which goes
+                over the structure of how this layout is built, along with some specific tips on how to edit it in
+                certain ways.
+            </p>
+            <p>Check the links in the sidebar for more resources to build your own website!</p>
+
+            <p>- Cat Ipsum -</p>
+            <p>
+                Rub my belly hiss swipe at owner's legs sniff catnip and act crazy growl at dogs in my sleep sit on the
+                laptop for hiss at vacuum cleaner i like to spend my days sleeping and eating fishes that my human
+                fished for me.
+            </p>
+
+            <p>
+                Head nudges eat my own ears. Hey! you there, with the hands why can't i catch that stupid red dot, shed
+                everywhere shed everywhere stretching attack your ankles chase the red dot, hairball run catnip eat the
+                grass sniff, or roll over and sun my belly curl up and sleep on the freshly laundered towels.
+            </p>
+        </main>
+    </div>
+
+    <footer id="footer" style="margin-top: 10px"></footer>
+</div>
+
         <h1 class="title">weed</h1>
 
         <div id="mainDiv">Hello Div</div>
@@ -18,14 +92,19 @@
         <button onclick="buttonClicked()">Click me</button>
 
         <div class="cursor">
-            <svg style="overflow:visible" viewBox="0 0 47.94 47.94">
-                <path d="M26.285,2.486l5.407,10.956c0.376,0.762,1.103,1.29,1.944,1.412l12.091,1.757
+            <svg style="overflow: visible" viewBox="0 0 47.94 47.94">
+                <path
+                    d="M26.285,2.486l5.407,10.956c0.376,0.762,1.103,1.29,1.944,1.412l12.091,1.757
                 c2.118,0.308,2.963,2.91,1.431,4.403l-8.749,8.528c-0.608,0.593-0.886,1.448-0.742,2.285l2.065,12.042
                 c0.362,2.109-1.852,3.717-3.746,2.722l-10.814-5.685c-0.752-0.395-1.651-0.395-2.403,0l-10.814,5.685
                 c-1.894,0.996-4.108-0.613-3.746-2.722l2.065-12.042c0.144-0.837-0.134-1.692-0.742-2.285l-8.749-8.528
                 c-1.532-1.494-0.687-4.096,1.431-4.403l12.091-1.757c0.841-0.122,1.568-0.65,1.944-1.412l5.407-10.956
-                C22.602,0.567,25.338,0.567,26.285,2.486z"/>
+                C22.602,0.567,25.338,0.567,26.285,2.486z" />
             </svg>
         </div>
+        
+        <!--dodo and blahaj-->
+        <img id="dodo-corner" src="/images/dodo.png" />
+        <img id="blahaj-corner" src="/images/blahaj.png" />
     </body>
 </html>
