fix linking css

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
     <head>
         <meta charset="UTF-8" />
         <title>Title</title>
-        <link rel="stylesheet" href="/main/styles.css" />
-        <script defer src="/main/script.js"></script>
-        <script defer src="/main/abcd.js"></script>
+        <link rel="stylesheet" href="/styles.css" />
+        <script defer src="/script.js"></script>
+        <script defer src="/abcd.js"></script>
         <!--c-->
     </head>
     <body>
@@ -107,4 +107,5 @@
         <img id="dodo-corner" src="/images/dodo.png" />
         <img id="blahaj-corner" src="/images/blahaj.png" />
     </body>
+
 </html>
